<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Baking App</string>
    <string name="ingredient_measurement"><xliff:g example="3" id="measure_number">%s</xliff:g> (<xliff:g example="Tin" id="content_quantity">%s</xliff:g>)</string>
    <string name="step_label_text">Step <xliff:g example="1" id="step_id">%s</xliff:g>: <xliff:g example="Fry plantain" id="step_desc">%s</xliff:g></string>
    <string name="singular_ingredient">Ingredient</string>
    <string name="plural_ingredient">Ingredients</string>
    <string name="select_from_the_left_pane">Select from the left pane</string>
    <string name="ingredients">Ingredients</string>
    <string name="video_unavailable">Video unavailable</string>
    <string name="step_description_image">step description image</string>
    <string name="step">Step <xliff:g example="1" id="step_id">%s</xliff:g></string>
    <string name="image_unavailable">Image unavailable</string>
    <string name="notification_text">Press play to hear the piece!</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="rewind">Rewind</string>
    <string name="fastforward">Fast Forward</string>
    <string name="rew_btn">rew_btn</string>
    <string name="play_btn">play_btn</string>
    <string name="pause_btn">pause_btn</string>
    <string name="ffwd_btn">ffwd_btn</string>
    <string name="frame_preview">frame_preview</string>
    <string name="loading">Loading</string>
    <string name="image_wifi_unavailable">image_wifi_unavailable</string>
    <string name="poor_connectivity">Poor connectivity</string>
    <string name="try_again">Try again</string>
    <string name="add_widget">Add widget</string>
    <string name="no_ingredient_prompt">No ingredient available</string>
    <string name="widget_header_text"><xliff:g id="header_text" example="Nutella Pie">%s </xliff:g>Ingredients</string>
</resources>
