<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/dimen_20p"
    android:paddingStart="@dimen/dimen_20p"
    android:paddingRight="@dimen/dimen_20p"
    android:paddingEnd="@dimen/dimen_20p"
    android:paddingBottom="@dimen/dimen_10dp"
    android:paddingTop="@dimen/dimen_10dp"
    android:background="@color/colorDirtyWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_meal_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_meal"/>

    <RelativeLayout
        android:id="@+id/rl_data_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorDirtyWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_centerInParent="true"
            android:alpha="0.3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="@dimen/text_20sp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/pb_loading" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_network_connectivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorDirtyWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_150dp"
            android:src="@drawable/ic_signal_wifi_0_bar_black_24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_wifi_unavailable"
            android:layout_marginTop="@dimen/dimen_5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poor_connectivity"
            android:textSize="@dimen/text_20sp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:layout_marginStart="@dimen/dimen_10dp" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/try_again"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            android:textAllCaps="true" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>