<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:fastforward_increment="1000"
            app:rewind_increment="1000"
            app:resize_mode="fill"
            app:controller_layout_id="@layout/custom_player_control_view"/>

        <TextView
            android:id="@+id/tv_video_empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/video_unavailable"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/bg_empty_state"
            android:visibility="gone"/>

    </FrameLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/tv_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step"
                    android:textSize="@dimen/text_24sp"
                    android:textColor="@color/colorAccent"
                    android:background="@color/colorWhite"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    android:paddingTop="@dimen/dimen_8dp"
                    android:paddingLeft="@dimen/dimen_12dp"
                    android:paddingStart="@dimen/dimen_12dp"
                    android:paddingRight="@dimen/dimen_12dp"
                    android:paddingEnd="@dimen/dimen_12dp"/>

                <ImageView
                    android:id="@+id/step_description_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_header_text"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:contentDescription="@string/step_description_image" />

                <TextView
                    android:id="@+id/tv_image_empty_state"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_20dp"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dimen_6dp"
                    android:text="@string/image_unavailable"
                    android:textSize="@dimen/text_12sp"
                    android:background="@drawable/bg_empty_state"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_header_text"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_step_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_20dp"
                    android:gravity="start"
                    android:lineSpacingExtra="@dimen/dimen_6dp"
                    android:text="@string/image_unavailable"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/step_description_image"
                    android:layout_marginTop="@dimen/dimen_12dp"/>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

</LinearLayout>